--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,14 @@
 #--------------------------------------------------------------------------------------------------
 # \file  [PROJECT_NAME].cmake
 # \brief
+#
+# sudo apt-get install libxcursor-dev
 #--------------------------------------------------------------------------------------------------
 
 
 cmake_minimum_required(VERSION 3.0)
 
-project("xmappingnotify")
+project("xmappingnotify" CXX)
 #--------------------------------------------------------------------------------------------------
 # options
 set(PROJECT_TYPE                CXX)
@@ -16,12 +18,19 @@ set(CMAKE_VERBOSE_MAKEFILE      OFF)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_REQUIRED_QUIET        ON)
 #--------------------------------------------------------------------------------------------------
+# Find X11 package
+find_package(X11 REQUIRED)
+# find_package(Xcursor REQUIRED)
+
+
 # Add the source file
-add_executable(xmappingnotify xmappingnotify.cpp)
+add_executable(${PROJECT_NAME} xmappingnotify.cpp)
+
+target_include_directories(${PROJECT_NAME} PRIVATE ${X11_INCLUDE_DIR})
 
 # Set compiler flags
-target_compile_options(xmappingnotify PRIVATE -Wall -O2)
+target_compile_options(${PROJECT_NAME} PRIVATE -Wall -O2)
 
 # Link necessary libraries
-target_link_libraries(xmappingnotify PRIVATE X11 Xpm)
+target_link_libraries(${PROJECT_NAME} PRIVATE ${X11_LIBRARIES} Xcursor Xpm png)
 #--------------------------------------------------------------------------------------------------
