CMakeLists.txt [6+/10-] - dead(s)

--- a/xLang/CMakeLists.txt
+++ b/xLang/CMakeLists.txt
@@ -1,8 +1,6 @@
 #--------------------------------------------------------------------------------------------------
 # \file  [PROJECT_NAME].cmake
 # \brief
-#
-# sudo apt-get install libxcursor-dev
 #--------------------------------------------------------------------------------------------------
 
 
@@ -20,17 +18,15 @@ set(CMAKE_REQUIRED_QUIET        ON)
 #--------------------------------------------------------------------------------------------------
 # Find X11 package
 find_package(X11 REQUIRED)
-# find_package(Xcursor REQUIRED)
-
 
 # Add the source file
-add_executable(${PROJECT_NAME} main.cpp)
+add_executable(${PROJECT_NAME}
+	main.cpp)
 
-target_include_directories(${PROJECT_NAME} PRIVATE ${X11_INCLUDE_DIR})
-
-# Set compiler flags
-target_compile_options(${PROJECT_NAME} PRIVATE -Wall -O2)
+target_include_directories(${PROJECT_NAME} PRIVATE
+	${X11_INCLUDE_DIR})
 
 # Link necessary libraries
-target_link_libraries(${PROJECT_NAME} PRIVATE ${X11_LIBRARIES} Xcursor Xpm png)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+	${X11_LIBRARIES})
 #--------------------------------------------------------------------------------------------------
